--- a/monitoring/uss_qualifier/configurations/dev/netrid_v19.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/netrid_v19.yaml
@@ -15,6 +15,7 @@ v1:
                     dss_instances: netrid_dss_instances_v19
                     id_generator: id_generator
                     service_area: service_area
+                    problematically_big_area: problematically_big_area
     artifacts:
         report:
             report_path: output/report_netrid_v19.json
