Add configurable locality for mock_uss

--- a/monitoring/uss_qualifier/configurations/dev/faa/uft/local_message_signing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/faa/uft/local_message_signing.yaml
@@ -40,7 +40,7 @@ v1:
             participant_id: uss1
             base_url: http://host.docker.internal:8082
         mock_uss:
-          resource_type: resources.interuss.MockUSSResource
+          resource_type: resources.interuss.mock_uss.client.MockUSSResource
           dependencies:
             auth_adapter: utm_auth
           specification:
