--- a/monitoring/uss_qualifier/suites/faa/uft/message_signing.yaml
+++ b/monitoring/uss_qualifier/suites/faa/uft/message_signing.yaml
@@ -1,6 +1,6 @@
 name: UFT message signing
 resources:
-  mock_uss: resources.interuss.MockUSSResource
+  mock_uss: resources.interuss.mock_uss.client.MockUSSResource
   flight_planners: resources.flight_planning.FlightPlannersResource
   combination_selector: resources.flight_planning.FlightPlannerCombinationSelectorResource
   dss: resources.astm.f3548.v21.DSSInstanceResource
