Add sequence view artifact

--- a/schemas/monitoring/uss_qualifier/configurations/configuration/ArtifactsConfiguration.json
+++ b/schemas/monitoring/uss_qualifier/configurations/configuration/ArtifactsConfiguration.json
@@ -44,6 +44,17 @@
         }
       ]
     },
+    "sequence_view": {
+      "description": "If specified, configuration describing a desired report describing the sequence of events that occurred during the test",
+      "oneOf": [
+        {
+          "type": "null"
+        },
+        {
+          "$ref": "SequenceViewConfiguration.json"
+        }
+      ]
+    },
     "templated_reports": {
       "description": "List of report templates to be rendered",
       "items": {
