--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -44,3 +44,5 @@ v1:
       participant_requirements:
         uss1: uspace
         uss2: uspace
+    sequence_view:
+      output_path: output/sequence_uspace
