Clean up F3411-22a requirements
Check and format included test scenario steps

--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -63,7 +63,21 @@ v1:
           requirement_collections:
             - requirement_sets:
                 - astm.f3411.v22a.service_provider#Mandatory requirements
+                - astm.f3411.v22a.service_provider#Operator ID provider
+                - astm.f3411.v22a.service_provider#UAS ID Serial Number provider
+                - astm.f3411.v22a.service_provider#Height provider
+                - astm.f3411.v22a.service_provider#Operator Position provider
+                - astm.f3411.v22a.service_provider#Operational Status provider
                 - astm.f3411.v22a.display_provider#Mandatory requirements
+                - astm.f3411.v22a.display_provider#UAS ID Serial Number transmitter
+                - astm.f3411.v22a.display_provider#Timestamp transmitter
+                - astm.f3411.v22a.display_provider#Operational Status transmitter
+                - astm.f3411.v22a.display_provider#Operator ID transmitter
+                - astm.f3411.v22a.display_provider#Current Position transmitter
+                - astm.f3411.v22a.display_provider#Height transmitter
+                - astm.f3411.v22a.display_provider#Track Direction transmitter
+                - astm.f3411.v22a.display_provider#Speed transmitter
+                - astm.f3411.v22a.display_provider#Operator Position transmitter
                 - astm.f3411.v22a.dss_provider
                 - astm.f3548.v21.scd#Automated verification
       participant_requirements:
