--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,6 +95,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
+          path: monitoring
 
       - name: Get uss_qualifier reports
         uses: actions/download-artifact@v3
