Attempt to fix folder structure again

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,7 +101,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: monitoring-test-uss_qualifier-reports
-          path: ./artifacts/uss_qualifier/reports
+          path: ./artifacts
 
       - name: Make site content
         run: ./monitoring/github_pages/make_site_content.sh
