Publish GitHub Pages upon successfully-merged PR (#252)
* Publish GitHub Pages upon successfully-merged PR

* Exclude github_pages Markdown files from hygiene

* Check out repo before running script

* Specify checkout path

* Attempt to fix artifact folder structure

* Attempt to fix folder structure again

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,3 +80,39 @@ jobs:
       script: |
         cd monitoring/prober
         make test
+
+  publish-gh-pages:
+    name: Publish GitHub Pages
+    needs: [hygiene-tests, monitorlib-test, mock_uss-test, uss_qualifier-test, uss_qualifier_F3411-19-test, prober-test]
+    if: ${{ always() && contains(join(needs.*.result, ','), 'success') }}
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: true
+          path: monitoring
+
+      - name: Get uss_qualifier reports
+        uses: actions/download-artifact@v3
+        with:
+          name: monitoring-test-uss_qualifier-reports
+          path: ./artifacts
+
+      - name: Make site content
+        run: ./monitoring/github_pages/make_site_content.sh
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        if: github.ref == 'refs/heads/main'
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
+          enable_jekyll: true
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
+          commit_message: ${{ github.event.head_commit.message }}
