Provide new resources in higher-level test suites

--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -17,7 +17,8 @@ v1:
           invalid_flight_intents: invalid_flight_intents
           invalid_flight_auth_flights: invalid_flight_auth_flights
           flight_planners: flight_planners
-          dss: dss
+          scd_dss: scd_dss
+          scd_dss_instances: scd_dss_instances
 
           flights_data: adjacent_circular_flights_data
           service_providers: netrid_service_providers_v22a
@@ -26,6 +27,7 @@ v1:
           netrid_dss_instances: netrid_dss_instances_v22a
           id_generator: id_generator
           service_area: service_area
+          problematically_big_area: problematically_big_area
         specification:
           mock_uss_instances_source: mock_uss_instances
           locality_source: locality
@@ -38,7 +40,8 @@ v1:
                 invalid_flight_intents: invalid_flight_intents
                 invalid_flight_auth_flights: invalid_flight_auth_flights
                 flight_planners: flight_planners
-                dss: dss
+                scd_dss: scd_dss
+                scd_dss_instances: scd_dss_instances
 
                 flights_data: flights_data
                 service_providers: service_providers
@@ -47,6 +50,7 @@ v1:
                 netrid_dss_instances: netrid_dss_instances
                 id_generator: id_generator
                 service_area: service_area
+                problematically_big_area: problematically_big_area
             on_failure: Continue
   artifacts:
     tested_roles:
