--- a/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
@@ -7,6 +7,7 @@ resources:
   dss_instances: resources.astm.f3411.DSSInstancesResource
   id_generator: resources.interuss.IDGeneratorResource
   service_area: resources.netrid.ServiceAreaResource
+  problematically_big_area: resources.VerticesResource
 actions:
 - test_suite:
     suite_type: suites.astm.netrid.f3411_22a
@@ -18,6 +19,7 @@ actions:
       dss_instances: dss_instances
       id_generator: id_generator
       service_area: service_area
+      problematically_big_area: problematically_big_area
   on_failure: Continue
 participant_verifiable_capabilities:
 - id: uspace_netrid_service_provider
