--- a/monitoring/uss_qualifier/configurations/dev/f3548.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548.yaml
@@ -12,8 +12,8 @@ v1:
           conflicting_flights: conflicting_flights
           priority_preemption_flights: priority_preemption_flights
           invalid_flight_intents: invalid_flight_intents
-          dss: dss
-          dss_instances: dss_instances
+          dss: scd_dss
+          dss_instances: scd_dss_instances
   artifacts:
     tested_roles:
       report_path: output/tested_roles_f3548
