Add report validation to uss_qualifier

--- a/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
@@ -86,3 +86,5 @@ v1:
       participant_requirements:
         uss1: all_astm_dss_requirements
         uss2: all_astm_dss_requirements
+  validation:
+    $ref: ./library/validation.yaml#/normal_test
