--- a/monitoring/uss_qualifier/configurations/dev/geoawareness_cis.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/geoawareness_cis.yaml
@@ -17,3 +17,5 @@ v1:
       report_path: output/report_geoawareness_cis.json
     graph:
       gv_path: output/report_geoawareness_cis.gv
+  validation:
+    $ref: ./library/validation.yaml#/normal_test
