--- a/monitoring/uss_qualifier/configurations/dev/netrid_v19.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/netrid_v19.yaml
@@ -21,3 +21,5 @@ v1:
             report_path: output/report_netrid_v19.json
         tested_roles:
             report_path: output/tested_roles_netrid_v19
+    validation:
+      $ref: ./library/validation.yaml#/normal_test
