--- a/monitoring/uss_qualifier/configurations/dev/netrid_v22a.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/netrid_v22a.yaml
@@ -37,3 +37,5 @@ v1:
             participant_requirements:
                 uss1: sp_dp_dss
                 uss2: sp_dss
+    validation:
+      $ref: ./library/validation.yaml#/normal_test
