--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -89,3 +89,5 @@ v1:
         uss2: uspace
     sequence_view:
       output_path: output/sequence_uspace
+  validation:
+    $ref: ./library/validation.yaml#/normal_test
