--- a/monitoring/uss_qualifier/configurations/dev/f3548.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548.yaml
@@ -28,3 +28,5 @@ v1:
       participant_requirements:
         uss1: scd
         uss2: scd
+  validation:
+    $ref: ./library/validation.yaml#/normal_test
