--- a/monitoring/uss_qualifier/configurations/dev/f3548/flight_intent_validation.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548/flight_intent_validation.yaml
@@ -13,3 +13,5 @@ v1:
   artifacts:
     report:
       report_path: output/report_f3548_flight_intent_validation.json
+  validation:
+    $ref: ./library/validation.yaml#/normal_test
