--- a/monitoring/uss_qualifier/configurations/dev/f3548/nominal_planning_conflict_higher_priority.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548/nominal_planning_conflict_higher_priority.yaml
@@ -14,3 +14,5 @@ v1:
   artifacts:
     report:
       report_path: output/report_f3548_nominal_planning_conflict_higher_priority.json
+  validation:
+    $ref: ./library/validation.yaml#/normal_test
