--- a/monitoring/uss_qualifier/configurations/dev/general_flight_auth.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/general_flight_auth.yaml
@@ -13,3 +13,5 @@ v1:
   artifacts:
     report:
       report_path: output/report_general_flight_auth.json
+  validation:
+    $ref: ./library/validation.yaml#/normal_test
