--- a/monitoring/uss_qualifier/configurations/dev/geospatial_comprehension.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/geospatial_comprehension.yaml
@@ -13,3 +13,5 @@ v1:
   artifacts:
     report:
       report_path: output/report_geospatial_comprehension.json
+  validation:
+    $ref: ./library/validation.yaml#/normal_test
