--- a/monitoring/uss_qualifier/configurations/dev/noop.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/noop.yaml
@@ -27,3 +27,5 @@ v1:
     report:
       # Path to main report output
       report_path: output/report_noop.json
+  validation:
+    $ref: ./library/validation.yaml#/normal_test
