--- a/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
+++ b/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
@@ -4,6 +4,7 @@ resources:
   f3411v22a_dss_instances: resources.astm.f3411.DSSInstancesResource
   id_generator: resources.interuss.IDGeneratorResource
   service_area: resources.netrid.ServiceAreaResource
+  problematically_big_area: resources.VerticesResource
 actions:
   - action_generator:
       generator_type: action_generators.astm.f3411.ForEachDSS
@@ -11,6 +12,7 @@ actions:
         dss_instances: f3411v19_dss_instances
         id_generator: id_generator
         service_area: service_area
+        problematically_big_area: problematically_big_area
       specification:
         action_to_repeat:
           test_suite:
@@ -20,6 +22,7 @@ actions:
               all_dss_instances: dss_instances
               id_generator: id_generator
               isa: service_area
+              problematically_big_area: problematically_big_area
           on_failure: Continue
         dss_instances_source: dss_instances
         dss_instance_id: dss
@@ -30,6 +33,7 @@ actions:
         dss_instances: f3411v22a_dss_instances
         id_generator: id_generator
         service_area: service_area
+        problematically_big_area: problematically_big_area
       specification:
         action_to_repeat:
           test_suite:
@@ -39,6 +43,7 @@ actions:
               all_dss_instances: dss_instances
               id_generator: id_generator
               isa: service_area
+              problematically_big_area: problematically_big_area
           on_failure: Continue
         dss_instances_source: dss_instances
         dss_instance_id: dss
