--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -52,21 +52,24 @@ v1:
           resource_type: resources.flight_planning.FlightIntentsResource
           specification:
             planning_time: '0:05:00'
-            file_source: file://./test_data/che/flight_intents/conflicting_flights.json
+            file:
+                path: file://./test_data/che/flight_intents/conflicting_flights.json
 
         # Details of priority-preemption flights (used in nominal planning priority scenario)
         priority_preemption_flights:
           resource_type: resources.flight_planning.FlightIntentsResource
           specification:
             planning_time: '0:05:00'
-            file_source: test_data.che.flight_intents.priority_preemption
+            file:
+                path: test_data.che.flight_intents.priority_preemption
 
         # Details of flights with invalid operational intents (used in flight intent validation scenario)
         invalid_flight_intents:
           resource_type: resources.flight_planning.FlightIntentsResource
           specification:
             planning_time: '0:05:00'
-            file_source: test_data.che.flight_intents.invalid_flight_intents
+            file:
+                path: test_data.che.flight_intents.invalid_flight_intents
 
         # Location of DSS instance that can be used to verify flight planning outcomes
         dss:
