Optimize RID tests

--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -20,7 +20,7 @@ v1:
           scd_dss: scd_dss
           scd_dss_instances: scd_dss_instances
 
-          flights_data: adjacent_circular_flights_data
+          flights_data: foca_flights_data
           service_providers: netrid_service_providers_v22a
           observers: netrid_observers_v22a
           evaluation_configuration: netrid_observation_evaluation_configuration
