--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,18 +60,6 @@ jobs:
         cd monitoring/uss_qualifier
         make test
 
-  uss_qualifier_F3411-19-test:
-    name: uss_qualifier F3411-19 tests
-    uses: ./.github/workflows/monitoring-test.yml
-    with:
-      name: uss_qualifier_F3411-19
-      script: |
-        export CONFIG_NAME=configurations.dev.netrid_v19 \
-          USS_QUALIFIER_STOP_FAST=true
-
-        cd monitoring/uss_qualifier
-        make test
-
   prober-test:
     name: prober tests
     uses: ./.github/workflows/monitoring-test.yml
@@ -83,7 +71,7 @@ jobs:
 
   publish-gh-pages:
     name: Publish GitHub Pages
-    needs: [hygiene-tests, monitorlib-test, mock_uss-test, uss_qualifier-test, uss_qualifier_F3411-19-test, prober-test]
+    needs: [hygiene-tests, monitorlib-test, mock_uss-test, uss_qualifier-test, prober-test]
     if: ${{ always() && contains(join(needs.*.result, ','), 'success') }}
     runs-on: ubuntu-latest
     permissions:
