--- a/monitoring/uss_qualifier/Makefile
+++ b/monitoring/uss_qualifier/Makefile
@@ -1,5 +1,5 @@
 .PHONY: lint
-lint: validate-docs python-lint shell-lint
+lint: validate-docs python-lint
 
 .PHONY: validate-docs
 validate-docs:
@@ -9,10 +9,6 @@ validate-docs:
 .PHONY: python-lint
 python-lint:
 	docker run --rm -v "$(CURDIR):/code" -w /code pyfound/black:22.10.0 black --check . || (echo "Linter didn't succeed. You can use the following command to fix python linter issues: make format" && exit 1)
-
-.PHONY: shell-lint
-shell-lint:
-	find . -name '*.sh' | xargs docker run --rm -v "$(CURDIR):/code" -w /code koalaman/shellcheck
 
 .PHONY: format
 format: format-documentation
