--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -12,6 +12,9 @@ v1:
           mock_uss_instances: mock_uss_instances_scdsc
           locality: locality_che
 
+          version_providers: version_providers
+          system_identity: uspace_system_identity
+
           conflicting_flights: conflicting_flights
           priority_preemption_flights: priority_preemption_flights
           invalid_flight_intents: invalid_flight_intents
@@ -35,6 +38,9 @@ v1:
             test_suite:
               suite_type: suites.uspace.required_services
               resources:
+                version_providers: version_providers
+                system_identity: system_identity
+
                 conflicting_flights: conflicting_flights
                 priority_preemption_flights: priority_preemption_flights
                 invalid_flight_intents: invalid_flight_intents
