--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ faker===8.1.0  # uss_qualifier
 flask==1.1.2
 Flask-HTTPAuth==4.7.0  # atproxy
 geojson===2.5.0  # uss_qualifier
+gevent==22.10.2  # mock_uss / gunicorn worker
 google-auth==1.6.3
 graphviz==0.20.1  # uss_qualifier
 gunicorn==20.1.0
