--- a/monitoring/uss_qualifier/configurations/dev/faa/uft/local_message_signing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/faa/uft/local_message_signing.yaml
@@ -2,7 +2,7 @@ v1:
   test_run:
     resources:
       resource_declarations:
-        "$ref": ../../resources.yaml#/common
+        "$ref": ../../library/resources.yaml#/common
         flight_planners:
           resource_type: resources.flight_planning.FlightPlannersResource
           dependencies:
@@ -26,12 +26,14 @@ v1:
           resource_type: resources.flight_planning.FlightIntentsResource
           specification:
             planning_time: '0:05:00'
-            file_source: file://./test_data/che/flight_intents/conflicting_flights.json
+            file:
+              path: file://./test_data/che/flight_intents/conflicting_flights.json
         priority_preemption_flights:
           resource_type: resources.flight_planning.FlightIntentsResource
           specification:
             planning_time: '0:05:00'
-            file_source: test_data.che.flight_intents.priority_preemption
+            file:
+              path: test_data.che.flight_intents.priority_preemption
         dss:
           resource_type: resources.astm.f3548.v21.DSSInstanceResource
           dependencies:
@@ -61,5 +63,3 @@ v1:
   artifacts:
     report:
       report_path: output/report.json
-    graph:
-      gv_path: output/report.gv
