--- a/monitoring/uss_qualifier/configurations/dev/f3548/flight_intent_validation.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548/flight_intent_validation.yaml
@@ -2,16 +2,24 @@ v1:
   test_run:
     resources:
       resource_declarations:
-        "$ref": ../library/resources.yaml#/f3548_single_scenario
+        che_invalid_flight_intents: {$ref: '../library/resources.yaml#/che_invalid_flight_intents'}
+
+        utm_auth: {$ref: '../library/environment.yaml#/utm_auth'}
+        uss1_flight_planner: {$ref: '../library/environment.yaml#/uss1_flight_planner'}
+        scd_dss: {$ref: '../library/environment.yaml#/scd_dss'}
+    non_baseline_inputs:
+      - v1.test_run.resources.resource_declarations.utm_auth
+      - v1.test_run.resources.resource_declarations.uss1_flight_planner
+      - v1.test_run.resources.resource_declarations.scd_dss
     action:
       test_scenario:
         scenario_type: scenarios.astm.utm.FlightIntentValidation
         resources:
-          tested_uss: uss1
-          flight_intents: invalid_flight_intents
-          dss: dss
+          tested_uss: uss1_flight_planner
+          flight_intents: che_invalid_flight_intents
+          dss: scd_dss
   artifacts:
     report:
       report_path: output/report_f3548_flight_intent_validation.json
   validation:
-    $ref: ./library/validation.yaml#/normal_test
+    $ref: ../library/validation.yaml#/normal_test
