--- a/monitoring/uss_qualifier/suites/astm/utm/f3548_21.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/f3548_21.yaml
@@ -72,20 +72,20 @@ actions:
     generator_type: action_generators.flight_planning.FlightPlannerCombinations
     resources:
       flight_planners: flight_planners
-      priority_planning_selector: priority_planning_selector?
-      priority_preemption_flights: priority_preemption_flights
+      nominal_planning_selector: nominal_planning_selector?
+      conflicting_flights: conflicting_flights
       dss: dss
     specification:
       action_to_repeat:
         test_scenario:
           scenario_type: scenarios.astm.utm.ConflictEqualPriorityNotPermitted
           resources:
-            flight_intents: priority_preemption_flights
+            flight_intents: conflicting_flights
             tested_uss: uss1
             control_uss: uss2
             dss: dss
         on_failure: Continue
-      combination_selector_source: priority_planning_selector
+      combination_selector_source: nominal_planning_selector
       flight_planners_source: flight_planners
       roles:
         - uss1
