Fix intent link

--- a/monitoring/uss_qualifier/configurations/dev/message_signing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/message_signing.yaml
@@ -3,7 +3,6 @@ v1:
     resources:
       resource_declarations:
         che_conflicting_flights: {$ref: 'library/resources.yaml#/che_conflicting_flights'}
-        che_priority_preemption_flights: {$ref: 'library/resources.yaml#/che_priority_preemption_flights'}
         che_invalid_flight_intents: {$ref: 'library/resources.yaml#/che_invalid_flight_intents'}
         combination_selector:
           resource_type: resources.flight_planning.FlightPlannerCombinationSelectorResource
@@ -47,7 +46,7 @@ v1:
           flight_planners: flight_planners
           combination_selector: combination_selector
           conflicting_flights: che_conflicting_flights
-          priority_preemption_flights: che_priority_preemption_flights
+          priority_preemption_flights: che_conflicting_flights
           dss: scd_dss
 
   artifacts:
