Use `make image` to build image

--- a/monitoring/Makefile
+++ b/monitoring/Makefile
@@ -19,8 +19,8 @@ format:
 	cd monitorlib && make format
 	cd prober && make format
 
-.PHONY: build
-build:
+image: ../requirements.txt $(shell find . -type f ! -path "*/output/*" ! -name image) $(shell find ../interfaces -type f)
+	# Building image due to changes in the following files: $?
 	./build.sh
 
 .PHONY: test
