--- a/monitoring/uss_qualifier/test_data/che/flight_intents/invalid_flight_intents.yaml
+++ b/monitoring/uss_qualifier/test_data/che/flight_intents/invalid_flight_intents.yaml
@@ -41,7 +41,7 @@ intents:
           connectivity_methods:
             - cellular
           endurance_minutes: 30
-          emergency_procedure_url: https://uav.example.com/emergency
+          emergency_procedure_url: https://example.interussplatform.org/emergency
           operator_id: CHEo5kut30e0mt01-qwe
 
   valid_activated:
