--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -53,7 +53,7 @@ v1:
           specification:
             planning_time: '0:05:00'
             file:
-              path: file://./test_data/che/flight_intents/conflicting_flights.json
+              path: file://./test_data/che/flight_intents/conflicting_flights.yaml
 
         # Details of priority-preemption flights (used in nominal planning priority scenario)
         priority_preemption_flights:
