Run schema generation

--- a/schemas/monitoring/uss_qualifier/configurations/configuration/GraphConfiguration.json
+++ b/schemas/monitoring/uss_qualifier/configurations/configuration/GraphConfiguration.json
@@ -1,19 +1,19 @@
 {
+  "$id": "https://github.com/interuss/monitoring/blob/main/schemas/monitoring/uss_qualifier/configurations/configuration/GraphConfiguration.json",
   "$schema": "https://json-schema.org/draft/2020-12/schema",
-  "type": "object",
+  "description": "monitoring.uss_qualifier.configurations.configuration.GraphConfiguration, as defined in monitoring/uss_qualifier/configurations/configuration.py",
   "properties": {
     "$ref": {
-      "type": "string",
-      "description": "Path to content that replaces the $ref"
+      "description": "Path to content that replaces the $ref",
+      "type": "string"
     },
     "gv_path": {
-      "type": "string",
-      "description": "Path of GraphViz (.gv) text file to contain a visualization of the test run"
+      "description": "Path of GraphViz (.gv) text file to contain a visualization of the test run",
+      "type": "string"
     }
   },
-  "$id": "https://github.com/interuss/monitoring/blob/main/schemas/monitoring/uss_qualifier/configurations/configuration/GraphConfiguration.json",
-  "description": "monitoring.uss_qualifier.configurations.configuration.GraphConfiguration, as defined in monitoring/uss_qualifier/configurations/configuration.py",
   "required": [
     "gv_path"
-  ]
+  ],
+  "type": "object"
 }
