--- a/monitoring/uss_qualifier/configurations/dev/general_flight_auth.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/general_flight_auth.yaml
@@ -10,7 +10,7 @@ v1:
         resources:
           table: example_flight_check_table
   artifacts:
-    report:
-      report_path: output/report_general_flight_auth.json
+    output_path: output/general_flight_auth
+    raw_report: {}
   validation:
     $ref: ./library/validation.yaml#/normal_test
