--- a/monitoring/uss_qualifier/configurations/dev/geoawareness_cis.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/geoawareness_cis.yaml
@@ -13,9 +13,7 @@ v1:
         resources:
           source_document: source_document
   artifacts:
-    report:
-      report_path: output/report_geoawareness_cis.json
-    graph:
-      gv_path: output/report_geoawareness_cis.gv
+    output_path: output/geoawareness_cis
+    raw_report: {}
   validation:
     $ref: ./library/validation.yaml#/normal_test
