--- a/monitoring/uss_qualifier/configurations/dev/geospatial_comprehension.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/geospatial_comprehension.yaml
@@ -10,7 +10,7 @@ v1:
         resources:
           table: example_feature_check_table
   artifacts:
-    report:
-      report_path: output/report_geospatial_comprehension.json
+    output_path: output/geospatial_comprehension
+    raw_report: {}
   validation:
     $ref: ./library/validation.yaml#/normal_test
