--- a/monitoring/uss_qualifier/configurations/dev/message_signing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/message_signing.yaml
@@ -50,5 +50,5 @@ v1:
           dss: scd_dss
 
   artifacts:
-    report:
-      report_path: output/report_message_signing.json
+    output_path: output/message_signing
+    raw_report: {}
