--- a/monitoring/uss_qualifier/configurations/dev/noop.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/noop.yaml
@@ -24,8 +24,10 @@ v1:
           noop_config: noop_config
 
   artifacts:
-    report:
-      # Path to main report output
-      report_path: output/report_noop.json
+    output_path: output/noop
+    raw_report:
+      indent: 2
+    sequence_view: {}
+    report_html: {}
   validation:
     $ref: ./library/validation.yaml#/normal_test
