--- a/schemas/monitoring/uss_qualifier/configurations/configuration/TemplatedReportConfiguration.json
+++ b/schemas/monitoring/uss_qualifier/configurations/configuration/TemplatedReportConfiguration.json
@@ -18,8 +18,8 @@
         }
       ]
     },
-    "output_path": {
-      "description": "Path of HTML file to contain the rendered templated report",
+    "report_name": {
+      "description": "Name of HTML file (without extension) to contain the rendered templated report",
       "type": "string"
     },
     "template_url": {
@@ -28,7 +28,7 @@
     }
   },
   "required": [
-    "output_path",
+    "report_name",
     "template_url"
   ],
   "type": "object"
