--- a/schemas/monitoring/uss_qualifier/configurations/configuration/ReportHTMLConfiguration.json
+++ b/schemas/monitoring/uss_qualifier/configurations/configuration/ReportHTMLConfiguration.json
@@ -7,13 +7,10 @@
       "description": "Path to content that replaces the $ref",
       "type": "string"
     },
-    "html_path": {
-      "description": "Path of HTML file to contain an HTML rendering of the raw test report object",
-      "type": "string"
+    "redact_access_tokens": {
+      "description": "When True, look for instances of \"Authorization\" keys in the report with values starting \"Bearer \" and redact the signature from those access tokens",
+      "type": "boolean"
     }
   },
-  "required": [
-    "html_path"
-  ],
   "type": "object"
 }
